--- a/views/results/index.css
+++ b/views/results/index.css
@@ -2,13 +2,31 @@
 body {
   margin: 0;
   padding: 0;
-  /*background: var(--background);*/
+  background: var(--background);
 }
 
-div.thumbnail {
+.thumbnail {
   width: 25vw;
   height: 25vw;
   max-width: 25vw;
   max-height: 25vw;
   float: left;
+}
+
+.thumbnail img {
+  height: 100%;
+  opacity: 0;
+}
+
+.thumbnail img.loaded {
+  opacity: 1;
+  transition: opacity 300ms
+}
+
+gaia-loading {
+  position: absolute !important;
+  z-index: -1;
+  left: 50%;
+  top: 50%;
+  margin: -20px !important;
 }
