--- a/views/results/index.html
+++ b/views/results/index.html
@@ -3,10 +3,11 @@
 <head lang="en-US">
   <meta charset="utf-8">
   <title>Results</title>
+  <base href="../../">
 
   <!-- Define the header-action type -->
   <meta property="navigation:type" content="back">
-  <meta property="navigation:link" content="search/index.html">
+  <meta property="navigation:link" content="views/search/">
 
   <!-- Define the name of the view-panel's service -->
   <meta property="service" content="add-view">
@@ -15,11 +16,12 @@
   <meta property="action:save:title" data-l10n-id="save">
   <meta property="action:save:on:click" content="submit">
 
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="../../bower_components/gaia-theme/gaia-theme.css">
-  <script src="../../bower_components/alameda/alameda.js" data-main="config"></script>
+  <link rel="stylesheet" href="views/results/index.css">
+  <link rel="stylesheet" href="bower_components/gaia-theme/gaia-theme.css">
+  <script src="bower_components/alameda/alameda.js" data-main="views/results/config"></script>
 </head>
 <body class="theme-media">
+  <gaia-loading id="spinner"></gaia-loading>
   <div id="main"></div>
 </body>
 </html>
