--- a/views/search/index.html
+++ b/views/search/index.html
@@ -3,21 +3,23 @@
 <head lang="en-US">
   <meta charset="utf-8">
   <title>Search</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="../../bower_components/gaia-theme/gaia-theme.css">
-  <script src="../../bower_components/gaia-component/gaia-component.js"></script>
-  <script src="../../bower_components/gaia-text-input/gaia-text-input.js"></script>
-  <script src="../../bower_components/gaia-button/gaia-button.js"></script>
-  <script src="../../bower_components/threads/threads.js"></script>
-  <script src="../../bower_components/little-browser/lib/runtime.js"></script>
+  <base href="../../">
+  <link rel="prerender" href="views/results">
+  <link rel="stylesheet" href="views/search/index.css">
+  <link rel="stylesheet" href="bower_components/gaia-theme/gaia-theme.css">
+  <script src="bower_components/gaia-component/gaia-component.js"></script>
+  <script src="bower_components/gaia-text-input/gaia-text-input.js"></script>
+  <script src="bower_components/gaia-button/gaia-button.js"></script>
+  <script src="bower_components/threads/threads.js"></script>
+  <script src="bower_components/little-browser/lib/runtime.js"></script>
   <!-- <script src="../../bower_components/alameda/alameda.js" data-main="config"></script> -->
 </head>
 <body class="theme-media">
-  <form>
-    <gaia-text-input placeholder="Search"></gaia-text-input>
-    <a href="../results/index.html" rel="next">
-      <gaia-button>Submit</gaia-button>
-    </a>
+  <form action="views/results" method="get">
+    <input placeholder="Search" name="query">
+    <!-- <a href="/views/results" rel="next"> -->
+      <button>Submit</button>
+    <!-- </a> -->
   </form>
 </body>
 </html>
