--- a/views/search/index.html
+++ b/views/search/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en-US">
   <meta charset="utf-8">
-  <title>Search</title>
+  <title>Flickr</title>
   <base href="../../">
   <link rel="prerender" href="views/results">
   <link rel="stylesheet" href="views/search/index.css">
@@ -12,14 +12,10 @@
   <script src="bower_components/gaia-button/gaia-button.js"></script>
   <script src="bower_components/threads/threads.js"></script>
   <script src="bower_components/little-browser/lib/runtime.js"></script>
-  <!-- <script src="../../bower_components/alameda/alameda.js" data-main="config"></script> -->
 </head>
 <body class="theme-media">
   <form action="views/results" method="get">
-    <input placeholder="Search" name="query">
-    <!-- <a href="/views/results" rel="next"> -->
-      <button>Submit</button>
-    <!-- </a> -->
+    <input placeholder="Search" type="search" name="query">
   </form>
 </body>
 </html>
