--- a/layouts/small/index.html
+++ b/layouts/small/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="../../">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
-    <title>Photo Browse</title>
-    <link rel="stylesheet" href="css/app.css">
+    <title>Flickr</title>
+    <link rel="stylesheet" href="layouts/small/index.css">
     <link rel="stylesheet" href="bower_components/gaia-theme/gaia-theme.css">
     <link rel="stylesheet" href="bower_components/gaia-icons/gaia-icons-embedded.css">
   </head>
@@ -23,7 +24,7 @@
     <script src="bower_components/little-browser/lib/little-browser.js"></script>
     <script src="bower_components/font-fit/font-fit.js"></script>
     <script src="bower_components/gaia-header/gaia-header.js"></script>
-    <script src="js/threads-manager.js"></script>
-    <script src="js/app.js"></script>
+    <script src="layouts/small/threads-manager.js"></script>
+    <script src="layouts/small/index.js"></script>
   </body>
 </html>
