--- a/layouts/small/index.html
+++ b/layouts/small/index.html
@@ -8,15 +8,6 @@
     <link rel="stylesheet" href="layouts/small/index.css">
     <link rel="stylesheet" href="bower_components/gaia-theme/gaia-theme.css">
     <link rel="stylesheet" href="bower_components/gaia-icons/gaia-icons-embedded.css">
-  </head>
-  <body class="theme-media">
-    <gaia-header>
-      <h1></h1>
-    </gaia-header>
-
-    <div class="app-content">
-      <little-browser></little-browser>
-    </div>
 
     <!-- loading scripts sync for fast load -->
     <script src="bower_components/gaia-component/gaia-component.js"></script>
@@ -24,6 +15,17 @@
     <script src="bower_components/little-browser/lib/little-browser.js"></script>
     <script src="bower_components/font-fit/font-fit.js"></script>
     <script src="bower_components/gaia-header/gaia-header.js"></script>
+  </head>
+  <body class="theme-media">
+    <gaia-header>
+      <h1></h1>
+    </gaia-header>
+
+    <div class="app-content">
+      <!-- <iframe src="views/search/index.html"/> -->
+      <little-browser></little-browser>
+    </div>
+
     <script src="layouts/small/threads-manager.js"></script>
     <script src="layouts/small/index.js"></script>
   </body>
